Arregladas imagenes info-bar-user

--- a/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
+++ b/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
@@ -2,8 +2,8 @@
   <!-- <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
     <p>IMAGEN Usuario</p>
   </div> -->
-  <div style="width: 28em; height: 24em; margin: 10px; text-align: center;">
-    <img *ngIf="user.rol === 'U'" class="img img-responsive"  style="max-height: 20em; margin: 10px; text-align: center; margin-left: 3em;"
+  <div style="margin: 10px;">
+    <img *ngIf="user.rol === 'U'" class="img img-responsive"  style="max-height: 20em; width: 10em; margin: 10px; text-align: center; margin-left: 3em;"
       src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
   </div>
   <div class="col" style="margin: 10px;">
@@ -23,8 +23,8 @@
       style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
       <p>IMAGEN Usuario</p>
     </div> -->
-    <div style="">
-      <img *ngIf="user.rol === 'M'" class="img img-responsive" style="max-height: 20em; margin: 10px; text-align: center; margin-left: 3em;"
+    <div style="margin: 10px;">
+      <img *ngIf="user.rol === 'M'" class="img img-responsive" style="max-height: 10em; width: 10em; margin: 10px; text-align: center; margin-left: 3em;"
         src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
     </div>
     <div class="col" style="margin: 10px;">
@@ -42,8 +42,8 @@
         style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
         <p>IMAGEN Usuario</p>
       </div> -->
-      <div style="width: 28em; height: 24em; margin: 10px; text-align: center;">
-        <img *ngIf="user.rol === 'A'" class="img img-responsive" style="max-height: 20em; margin: 10px; text-align: center; margin-left: 3em;"
+      <div style="margin: 10px;">
+        <img *ngIf="user.rol === 'A'" class="img img-responsive" style="max-height: 20em; width: 10em; margin: 10px; text-align: center; margin-left: 3em;"
           src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
       </div>
       <div class="col" style="margin: 10px;">
