--- a/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
+++ b/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
@@ -33,7 +33,13 @@
       <h6 class="text-white">Ejemplares: </h6>
     </div>
     <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
-      <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+      <div class="col-4">
+      </div>
+      <div class="col-8 d-flex justify-content-between">
+        <a routerLink="/notificaciones" class="btn info-btn-adm-mod" type="button">Notificaciones</a>
+
+        <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+      </div>
     </div>
   </div>
   <ng-template #Admin>
@@ -52,7 +58,13 @@
         <h6 class="text-white">Ejemplares: </h6>
       </div>
       <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
-        <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+        <div class="col-4">
+        </div>
+        <div class="col-8 d-flex justify-content-between">
+          <a routerLink="/notificaciones" class="btn info-btn-adm-mod" type="button">Notificaciones</a>
+
+          <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+        </div>
       </div>
     </div>
   </ng-template>
