--- a/src/app/GrupoLogin/login/login.component.html
+++ b/src/app/GrupoLogin/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row min-vw-100 h-100 d-flex justify-content-center">
   <!--Imagen del login-->
-  <div class="col-md-6 m-0 h-100 min-vw-50 mw-50 bg-cover"></div>
+  <div class="col-md-6 m-0 h-100 min-vw-50 mw-50 bg-cover d-none d-sm-block"></div>
 
   <!--Login-->
   <div class="col-md-6 m-0 h-100">
