--- a/src/app/GrupoLogin/login/login.component.html
+++ b/src/app/GrupoLogin/login/login.component.html
@@ -20,7 +20,10 @@
           </div>
           <div class="mb-3 d-flex justify-content-between">
             <a href="" style="font-size: 0.9em;">Olvidé mi contraseña</a>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <div class="d-flex flex-row">
+              <a routerLink="/registerUser">Registrarse</a>
+              <button type="submit" class="btn btn-primary">Entrar</button>
+            </div>
           </div>
         </form>
       </div>
@@ -29,7 +32,7 @@
     <!--Advertencia inferior-->
     <div class="row mh-50 h-50  d-flex justify-content-center align-items-end">
       <div class="col-8 text-center">
-        <p style="font-size: 0.8em; color: grey;">Si no posee un usuario póngase en contacto  con el moderador de su asociación</p>
+        <p style="font-size: 0.8em; color: grey;">Si no posee un usuario regístrese y espere la aceptacón del moderador de su asociación</p>
       </div>
     </div>
   </div>
