--- a/src/app/GrupoPrincipal/principal/principal.component.html
+++ b/src/app/GrupoPrincipal/principal/principal.component.html
@@ -4,7 +4,7 @@
 <div class="row">
   <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
 </div>
-<app-post [posts]="posts" class="min-vw-100 d-flex justify-content-center flex-wrap"></app-post>
+<app-post [posts]="posts" class="min-vw-100 d-flex flex-column justify-content-center"></app-post>
 <div class="row">
   <app-footer class="min-vw-100"></app-footer>
 </div>
