--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -20,13 +20,14 @@
       </form>
       -->
 
-      <form class="ml-4">
-        <input type="text" placeholder="Usuario" [formControl]="myControl" [matAutocomplete]="auto">
+      <form class="ml-4" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <input id="userByName" type="text" placeholder="Usuario" [formControl]="myControl" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let u of filteredOptions | async" [value]="u">
-            <a routerLink="/principal/user/{{ u.split('#')[1] }}">{{ u.split('#')[0] }}</a>
+          <mat-option *ngFor="let u of filteredOptions | async" [value]="u.split('#')[0]">
+            <a style="display: block; height: 100%; width: 100%;" routerLink="/principal/user/{{ u.split('#')[1] }}">{{ u.split('#')[0] }}</a>
           </mat-option>
         </mat-autocomplete>
+        <button type="submit" class="btn btn-primary ml-2">Buscar</button>
       </form>
 
 
@@ -35,11 +36,11 @@
           <a class="text-white mr-5" style="font-size: smaller;" routerLink="/loggedout" (click)="logout()">Cerrar
             sesión</a>
           {{ user.name }}
-          <img *ngIf="user.rol === 'U'" class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/user.png"
+          <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/user.png"
             alt="Imagen del usuario">
-          <img *ngIf="user.rol === 'M'" class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/mod.png"
+          <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/mod.png"
             alt="Imagen del usuario">
-          <img *ngIf="user.rol === 'A'" class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/admin.png"
+          <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/admin.png"
             alt="Imagen del usuario">
         </span>
       </a>
