--- a/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
+++ b/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
@@ -12,6 +12,8 @@
     <h6 class="text-white">Ejemplares: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
+    <a routerLink="/notificaciones" class="btn info-btn-usr mr-1" type="button">Notificaciones</a>
+
     <a routerLink="/principal" class="btn info-btn-usr" type="button">Ir a Asociación</a>
   </div>
 </div>
