--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -27,7 +27,7 @@
             <a style="display: block; height: 100%; width: 100%;" routerLink="/principal/user/{{ u.split('#')[1] }}">{{ u.split('#')[0] }}</a>
           </mat-option>
         </mat-autocomplete>
-        <button type="submit" class="btn btn-primary ml-2">Buscar</button>
+        <button type="submit" class="btn blue-bg-snowmasher text-white ml-2">Buscar</button>
       </form>
 
 
