--- a/src/app/GrupoGeneral/info-bar/info-bar.component.html
+++ b/src/app/GrupoGeneral/info-bar/info-bar.component.html
@@ -2,8 +2,8 @@
   <!-- <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
     <p>IMAGEN ASOCIACION</p>
   </div> -->
-  <div style="width: 16em; height: 11em; margin: 10px; text-align: center;">
-    <img class="img img-responsive img-thumbnail" style="max-height: 10em; min-height: 8em; margin: 10px; text-align: center; margin-left: 3em;" src="{{ asociacion.url_img }}">
+  <div style="width: auto; height: 10rem; margin: 1rem; display: flex; justify-content: center; align-content: center;">
+    <img class="img img-responsive img-thumbnail" style="max-height: 10rem; min-height: 8rem; margin: 1rem; margin-left: 3rem;" src="{{ asociacion.url_img }}">
   </div>
   <div class="col" style="margin: 10px;">
     <h4 class="text-white">{{ asociacion.nombre }}</h4>
