--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -10,18 +10,24 @@
   <div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
     <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em;">
       <div class="col-6  d-flex flex-column">
-        <h4>{{ canario.anilla }}</h4>
+        <h4>Nº de anilla: {{ canario.anilla }}</h4>
       </div>
       <div class="col-6 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" style="border: 1px solid var(--blue);" routerLink="../update/{{ canario.id }}"
-            class="btn btn-table-ee">Editar</button>
-          <button type="button" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Intercambiar</button>
+
+          <button *ngIf="canario.id_usuario === myUser" type="button" style="border: 1px solid var(--blue);"
+            routerLink="../update/{{ canario.id }}" class="btn btn-table-ee">Editar</button>
+
+          <button data-toggle="modal" [attr.data-target]="'#modalIntercambio'+canario.id"
+            *ngIf="canario.id_usuario !== myUser" type="button" style="border: 1px solid var(--blue);"
+            class="btn btn-table-ee">Intercambiar</button>
+
           <!-- Button trigger modal -->
-          <button type="button" class="btn btn-danger" data-toggle="modal"
+          <button *ngIf="canario.id_usuario === myUser" type="button" class="btn btn-danger" data-toggle="modal"
             [attr.data-target]="'#modalBorrar'+canario.id">
             Borrar
           </button>
+
         </div>
       </div>
     </div>
@@ -42,10 +48,11 @@
               <td scope="row"><b>Fª de nacimiento:</b> {{ canario.nacimiento }}</td>
             </tr>
             <tr>
-              <td scope="row"><b>Fª de creación:</b> {{ canario.creacion | date: 'yyyy-MM-dd  HH:mm' }}</td>
+              <td scope="row"><b>Fª de creación:</b> {{ canario.creacion | date: 'yyyy-MM-dd | HH:mm' }}</td>
             </tr>
             <tr>
-              <td scope="row"><b>Fª última modificación:</b> {{ canario.modificacion | date: 'yyyy-MM-dd  HH:mm' }}</td>
+              <td scope="row"><b>Fª última modificación:</b> {{ canario.modificacion | date: 'yyyy-MM-dd | HH:mm' }}
+              </td>
             </tr>
             <tr>
               <td scope="row"><b>Fª de baja:</b> {{ canario.baja }}</td>
@@ -95,7 +102,31 @@
 
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
   <a routerLink="../" class="btn info-btn-usr" type="button" *ngIf="canario.id_usuario === myUser">Atrás</a>
-  <a routerLink="../user/{{ canario.id_usuario }}" class="btn info-btn-usr" type="button" *ngIf="canario.id_usuario !== myUser">Atrás</a>
+  <a routerLink="../user/{{ canario.id_usuario }}" class="btn info-btn-usr" type="button"
+    *ngIf="canario.id_usuario !== myUser">Atrás</a>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalIntercambio{{ canario.id }}" tabindex="-1" role="dialog"
+aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="ModalLabel">Intercambio</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      ¿Está seguro de solicitar el intercambio de <b>{{ canario.anilla }}?</b>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+      <button type="button" class="btn blue-bg-snowmasher text-white"
+        (click)="intercambiar(canario.id, canario.id_usuario)">Solicitar</button>
+    </div>
+  </div>
+</div>
 </div>
 
 <div class="row">
