--- a/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
+++ b/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
@@ -35,32 +35,34 @@
               <td>
                 <span class="d-flex justify-content-center">
                   <!-- Button trigger modal -->
-                  <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalIntercambio'+canario.id">
+                  <button type="button" class="btn" data-toggle="modal"
+                    [attr.data-target]="'#modalIntercambio'+canario.id">
                     <i class="fas fa-exchange-alt"></i>
                   </button>
                 </span>
 
                 <!-- Modal -->
-            <div class="modal fade" id="modalIntercambio{{ canario.id }}" tabindex="-1" role="dialog"
-            aria-labelledby="ModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="ModalLabel">Intercambio</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                <div class="modal fade" id="modalIntercambio{{ canario.id }}" tabindex="-1" role="dialog"
+                  aria-labelledby="ModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="ModalLabel">Intercambio</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        ¿Está seguro de solicitar el intercambio de <b>{{ canario.anilla }}?</b>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn blue-bg-snowmasher text-white"
+                          (click)="intercambiar(canario.id, canario.id_usuario)">Solicitar</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="modal-body">
-                  ¿Está seguro de solicitar el intercambio de <b>{{ canario.anilla }}?</b>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                  <button type="button" class="btn blue-bg-snowmasher text-white" (click)="intercambiar(canario.id, canario.id_usuario)">Solicitar</button>
-                </div>
-              </div>
-            </div>
-          </div>
               </td>
             </tr>
           </tbody>
