--- a/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
@@ -1,43 +1,28 @@
 <div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar
-    class="min-vw-100"
-    style="max-height: 4em; margin-bottom: 1em"
-  ></app-navbar>
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar-user
-    class="min-vw-100 d-flex justify-content-center"
-  ></app-info-bar-user>
+  <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
 </div>
 
 <div class="row">
-  <div
-    class="container mt-4 border darkblue-border-snowmasher"
-    style="min-height: 20em"
-  >
-    <div
-      class="row darkblue-bg-snowmasher text-light p-2"
-      style="min-height: 5em"
-    >
+  <div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em">
+    <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em">
       <div class="col-6 d-flex flex-column">
         <h4>{{ post.titulo }}</h4>
-        <h6>{{ post.created_at }}</h6>
+        <h6>{{ post.created_at | date: 'yyyy-MM-dd | (HH:mm)' }}</h6>
       </div>
       <div class="col-6 d-flex justify-content-end">
-        <div
-          class="btn-group"
-          role="group"
-          aria-label="Basic mixed styles example"
-        >
-          <button
-            type="button"
-            routerLink="/panel/adminPost/updatePost/{{ post.id }}"
-            style="border: 1px solid var(--blue)"
-            class="btn btn-table-ee"
-          >
+        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+          <button type="button" routerLink="/panel/adminPost/updatePost/{{ post.id }}"
+            style="border: 1px solid var(--blue)" class="btn btn-table-ee">
             Editar
           </button>
-          <button type="button" class="btn btn-danger">Baja</button>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-danger" data-toggle="modal"
+            [attr.data-target]="'#modalBorrar'+post.id">
+            Borrar
+          </button>
         </div>
       </div>
     </div>
@@ -47,21 +32,41 @@
       </div>
       <div class="col-6 p-4">
         <div>
-          <div
-            style="
+          <div style="
               background-color: cornsilk;
               width: 28em;
               height: 24em;
               margin: 10px;
               text-align: center;
-            "
-          >
+            ">
             <p>IMAGEN POST</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalBorrar{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      ¿Está seguro de dar de baja a {{ post.titulo }}?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+      <button type="button" class="btn btn-danger" (click)="borrar(post.id)">Borrar</button>
+    </div>
+  </div>
+</div>
 </div>
 
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
