--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -32,7 +32,7 @@
               <th style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.id }}</a></th>
               <td style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.nombre }}</a></td>
               <td>{{ asoc.id_mod}}</td>
-              <td>{{ asoc.created_at }}</td>
+              <td>{{ asoc.created_at | date: 'yyyy-MM-dd | HH:mm' }}</td>
               <td>
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
